# filter-optimizer

./: .gitignore  Experiments.ipynb  IIR_Filter.ipynb  Makefile  README.rst  RIAA.ipynb  demoivre.wxm  display_result.py  filterplot.py  optfilt  order7.wxm  parse_result.py  pyproject.toml  setup.py  showfromlog.py  vondras-transfer.wxm
filter_optimizer/: display_result.py  filter_optimizer.py  filterplot.py  parse_result.py  showfromlog.py
