#!/usr/bin/env python3
# Copyright (C) 2020-23 Dr. Ralf Schlatterbeck Open Source Consulting.
# Reichergasse 131, A-3411 Weidling.
# Web: http://www.runtux.com Email: office@runtux.com
# All rights reserved
# ****************************************************************************
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
#   The above copyright notice and this permission notice shall be included in
#   all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# ****************************************************************************

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "filter-optimizer"
dynamic         = ["version"]
authors         = [{ name="Ralf Schlatterbeck", email="rsc@runtux.com" }, ]
description     = "Optimize digital filters with differential evolution"
readme          = "README.rst"
license         = {text = "MIT License"}
requires-python = '>=3.7'
dependencies    = ['matplotlib', 'numpy', 'scipy', 'rsclib']
classifiers     = [
          'Development Status :: 3 - Alpha'
        , 'License :: OSI Approved :: MIT License'
        , 'Operating System :: OS Independent'
        , 'Programming Language :: Python'
        , 'Intended Audience :: Science/Research'
        , 'Intended Audience :: Other Audience'
        ]

[project.urls]
"Homepage" = "https://github.com/schlatterbeck/filter-optimizer"
"Bug Tracker" = "https://github.com/schlatterbeck/filter-optimizer/issues"

[project.scripts]
filter-optimizer      = 'filter_optimizer.filter_optimizer:main'
filter-display-result = 'filter_optimizer.display_result:main'
filter-show-from-log  = 'filter_optimizer.showfromlog:main'
filter-parse-result   = 'filter_optimizer.parse_result:main'

[tool.setuptools.dynamic]
version = {attr = "filter_optimizer.__version__"}
